--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,58 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+:root{
+  --color-bg:#000;
+  --color-text:#fff;
+  --color-secondary:#009688;
+  --color-overlay:#222;
 }
+::-webkit-scrollbar{
+  width: 10px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: var(--color-overlay);
+  border-radius: 20px;
+}
+::-webkit-scrollbar-thumb:hover{background-color: var(--color-secondary);}
+/* Start General Style */
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+  -webkit-tap-highlight-color: transparent;
+  font-family: 'Audiowide';
+  color: var(--color-text);
+  outline: none;
+}
+body{
+  background: linear-gradient(to bottom, var(--color-bg) 97%, var(--color-secondary));
+  width: 100%;
+  height: 100vh;
+}
+.container{
+  max-width: 90%;
+  margin: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  overflow: hidden;
+}
+/* End General Style */
+
+/* Start landing Page */
+.landing_page{
+  height: 100vh;
+  max-height:100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  backdrop-filter: blur(3px);
+  overflow: hidden !important;
+}
+
