--- a/src/Components/ui/Settings/ToggleSetting.module.css
+++ b/src/Components/ui/Settings/ToggleSetting.module.css
@@ -1,27 +1,42 @@
 
-.toggle_settings{
+.setting_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
     position: absolute;
     bottom: 40px;
     left: 0;
-    width: auto;
     height: auto;
-    z-index: 1;    
+    width: 30px;
+    z-index: 1;
+}
+
+.toggle_settings{
+    order: 2;
+    width: 100%;
+    text-align: center;
+    height: auto;    
 }
 .toggle_settings svg{
     font-size: 22px;
     cursor: pointer;
-    transition: .5s;
+    transition: color .5s;
 }
 .toggle_settings svg:hover{
     color: var(--color-secondary);
 }
+
+
 .settings{
-    display: none;
-    position: absolute;
-    bottom: 70px;
-    left: 7.2%;
-    width: 17px;
-    height: 115px;
+    order: 1;
+    height: auto;
+    width: 100%;
+    border: 1px solid var(--color-secondary);
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, .2);
+    backdrop-filter: blur(30px);
+    margin-bottom: 10px;
     overflow: hidden;
     animation: settingAnime 1s 1;
 }
@@ -30,11 +45,18 @@
     100%{height: 115px;transform: scale(100%);}
 }
 .settings li{
-    width: 100%;
-    height: 17px;
+    aspect-ratio: 1 / 1;
+    width: 70%;
     margin: 10px auto;
     border-radius: 5px;
-    font-size: 17px;
     text-align: center;
     cursor: pointer;
+}
+
+.show{
+    display: block;
+}
+
+.hide{
+    display: none;
 }
