--- a/src/Components/Common/Navbar/Navbar.module.css
+++ b/src/Components/Common/Navbar/Navbar.module.css
@@ -1,5 +1,5 @@
 /* Start NavBar */
-.navbar{
+.navbar {
     position: fixed;
     top: 0;
     left: 0;
@@ -10,61 +10,58 @@
 /* End NavBar */
 
 /* Start Header Area */
-.header_area{
+.header_area {
     display: flex;
     justify-content: space-between;
 }
-/* .logo span{
-    color: var(--color-secondary);
-} */
-.links{
+.links {
     display: flex;
     align-items: center;
     position: relative;
 }
-.links li{
+.links .linkItem {
     margin-left: 30px;
     cursor: pointer;
-    transition: .5s;
+    transition: 0.5s;
 }
-.links li:hover,
-.links .active{
+.links .linkItem:hover,
+.links .active {
     color: var(--color-secondary);
 }
-.toggle_menu{
+.toggle_menu {
     display: none;
     flex-direction: column;
     justify-content: center;
     align-items: flex-end;
-    width: 40px;    
+    width: 40px;
     height: auto;
     background-color: transparent;
     cursor: pointer;
-    transition: .5s;
+    transition: 0.5s;
     border: none;
 }
-.toggle_menu span{
+.toggle_menu span {
     height: 4px;
     background-color: var(--color-secondary);
     border-radius: 2px;
-    opacity: .5;
+    opacity: 0.5;
     width: 100%;
-    transition: .5s;
+    transition: 0.5s;
 }
-.toggle_menu span:nth-child(1){
+.toggle_menu span:nth-child(1) {
     width: 30px;
 }
-.toggle_menu span:nth-child(3){
+.toggle_menu span:nth-child(3) {
     width: 20px;
 }
-.toggle_menu:hover span{
+.toggle_menu:hover span {
     opacity: 1;
     width: 100%;
 }
-.toggle_menu span:not(:last-of-type){
+.toggle_menu span:not(:last-of-type) {
     margin-bottom: 5px;
 }
-.links .logo_link{
+.links .logo_link {
     display: none;
     position: absolute;
     top: 7%;
@@ -73,7 +70,7 @@
     text-align: center;
     width: 100%;
 }
-.links .close_link{
+.links .close_link {
     display: none;
     position: absolute;
     top: 9%;
@@ -82,47 +79,59 @@
     border-radius: 5px;
     background-color: var(--color-secondary);
     cursor: pointer;
-    opacity: .5;
+    opacity: 0.5;
 }
-.close_link:hover{
+.close_link:hover {
     opacity: 1;
 }
-/* Start meduim and small device in media query  */
-@media screen and (max-width:992px) {
+/* Start meduim and small device in media query */
+@media screen and (max-width: 992px) {
     .close_link,
-    .logo_link{
+    .logo_link {
         display: block !important;
     }
-    .toggle_menu{
+    .toggle_menu {
         display: flex;
     }
-    .links{
-        display: none !important;
+    .links {
+        display: none;
         padding-top: 150px;
         position: fixed;
         top: 0;
         left: 0;
         height: 100%;
-        width: 30%;
-        display: block;
+        width: 75%;
         border-right: 1px solid #333;
         background-color: #222;
         z-index: 999;
-        animation: moveLinks 1s 1;
+        transform: translateX(-100%); 
+        transition: transform 0.3s ease-in-out; 
     }
-    .links li{
+    .links.open {
+        display: block;
+        transform: translateX(0); 
+    }
+    .links .linkItem {
         margin: 0;
         margin-bottom: 20px;
         padding-left: 30px;
-        animation: linksAnime 2s 1;
-    } 
+        animation: linksAnime 0.5s 1;
+    }
 }
 @keyframes moveLinks {
-    0%{width: 0%;}
-    100%{max-width: 80%;}
+    0% {
+        width: 0%;
+    }
+    100% {
+        max-width: 80%;
+    }
 }
 @keyframes linksAnime {
-    0%{transform: translateX(-100%);}
-    100%{transform: translateX(0);}
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
 }
 /* End Header Area */
