--- a/src/Components/Home/DynamicIntro.module.css
+++ b/src/Components/Home/DynamicIntro.module.css
@@ -1,5 +1,11 @@
+.intro_text{
+    z-index: 50;
+    pointer-events: none;
+}
+
 .intro_text h1{
     font-size: 50px;
+    letter-spacing: 1px;
 }
 .intro_text p{
     text-align: center;
