--- a/src/Components/ui/Settings/ToggleSetting.module.css
+++ b/src/Components/ui/Settings/ToggleSetting.module.css
@@ -38,11 +38,13 @@
     backdrop-filter: blur(30px);
     margin-bottom: 10px;
     overflow: hidden;
-    animation: settingAnime 1s 1;
+    transform: scaleY(0);
+    transform-origin: bottom;
+    animation: settingAnime .5s 1 forwards;
 }
 @keyframes settingAnime {
-    0%{height: 0px;transform: scaleY(0);}
-    100%{height: 115px;transform: scale(100%);}
+    0% { transform: scaleY(0); }
+    100% { transform: scaleY(1); }
 }
 .settings li{
     aspect-ratio: 1 / 1;
@@ -52,6 +54,7 @@
     text-align: center;
     cursor: pointer;
 }
+
 
 .show{
     display: block;
