--- a/src/Components/Home/LandingPage.module.css
+++ b/src/Components/Home/LandingPage.module.css
@@ -18,13 +18,14 @@
     opacity: .2;
     z-index: -1;
     pointer-events: none;
-    background: linear-gradient(to top, var(--color-bg) 45%, transparent), 
+    background: linear-gradient(to top, var(--color-bg) 40%, transparent), 
             repeating-linear-gradient(to left, var(--color-secondary), transparent 10px, var(--color-secondary) 20px);;
 }
 
 .landing_img img{
     height: 100%;
     width: 100%;
+    backdrop-filter: blur(1px);
 }
 
 
