add longuaged system like solar system

--- a/src/Components/Common/Navbar/Navbar.module.css
+++ b/src/Components/Common/Navbar/Navbar.module.css
@@ -94,6 +94,10 @@
 .show{
     display: block !important;
 }
+
+.hide{
+    display: none !important;
+}
 /* Start meduim and small device in media query */
 @media screen and (max-width: 992px) {
     .close_link,
