--- a/src/Components/ui/SolarSystem/SolarSystem.module.css
+++ b/src/Components/ui/SolarSystem/SolarSystem.module.css
@@ -3,10 +3,10 @@
   width: 250px;
   height: 250px;
   margin: 0 auto;
-  border: 1px dashed rgba(255, 255, 255, 0.2);
+  border: 2px solid rgba(255, 255, 255, 0.2);
   border-radius: 50%;
   /* overflow: hidden; */
-  background: rgba(0, 0, 0, .2);
+  background: rgba(0, 0, 0, .3);
   transform: translateX(1px);
 }
 
@@ -19,18 +19,39 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  box-shadow: 0 0 60px #ff8c00, 0 0 100px rgba(255, 140, 0, 0.4);
+  box-shadow: 0 0 0px #ff8c00, 0 0 100px rgba(255, 140, 0, 0.5);
   z-index: 10;
+  animation: sun 10s linear infinite;
+  animation-play-state: var(--animation-state);
 }
 
-/* المدار */
+@keyframes sun {
+  from {
+    box-shadow: 0 0 0px #ff8c00, 0 0 100px rgba(255, 140, 0, 0.5);
+  }
+  to {
+    box-shadow: 0 0 80px #ff8c00, 0 0 100px rgba(255, 140, 0, 0.4);
+  }
+}
+
 .planetOrbit {
   position: absolute;
   top: 50%;
   left: 50%;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px dashed rgba(255, 255, 255, 0.3);
   border-radius: 50%;
-  transform: translate(-50%, -50%);
+  transform:  rotate(0deg) translate(-50%, -50%);
+  animation: orbit 10s linear infinite;
+  animation-play-state: var(--animation-state);
+}
+
+@keyframes orbit {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  to {
+    transform: translate(-50%, -50%) rotate(-360deg);
+  }
 }
 
 /* الكوكب */
@@ -39,14 +60,14 @@
   top: calc(50% - 20px);
   left: calc(50% - 20px);
   width: 40px;
-  height: 40px;
+  height: 70px;
   transform-origin: center;
   transform: translate(var(--orbit-distance), calc(-50% + 20px));
-  animation: orbit var(--orbit-duration) linear infinite;
+  animation: planet var(--orbit-duration) linear infinite;
   animation-play-state: var(--animation-state);
 }
 
-@keyframes orbit {
+@keyframes planet {
   from {
     transform: rotate(0deg) translateX(var(--orbit-distance)) rotate(0deg);
   }
