--- a/src/Components/Common/Navbar/Navbar.module.css
+++ b/src/Components/Common/Navbar/Navbar.module.css
@@ -1,3 +1,7 @@
+.first{
+    z-index: 1000000;
+}
+
 /* Start NavBar */
 .navbar {
     position: fixed;
@@ -25,7 +29,7 @@
 }
 
 .links .linkItem a{
-    letter-spacing: 3px;
+    /* letter-spacing: 3px; */
     transition: color 0.5s;
 }
 .links .linkItem:hover a,
