--- a/src/index.css
+++ b/src/index.css
@@ -51,9 +51,10 @@ body{
   overflow: hidden;
 }
 .box{
-  position: absolute;
+  /* position: absolute;
   top: 0;
-  left: 0;
+  left: 0; */
+  height: 100%;
   width: 100%;
   /* height: 100%; */
   min-height: 100vh;
@@ -61,7 +62,6 @@ body{
   padding: 80px 0;
   animation: boxOpacity 1s 1;
   transition: .5s;
-  z-index: 1000;
 }
 @keyframes boxOpacity {
   0%,50%{opacity: 0;}
