--- a/src/Components/About/AboutContent.module.css
+++ b/src/Components/About/AboutContent.module.css
@@ -10,8 +10,10 @@
 .content_about .left{
     width: 40%;
     height: inherit;
-    background: url(../../assets/images/About/IMG-3.jpg)  50% 70%;
+    /* background: url(../../assets/images/About/IMG-3.jpg)  50% 70%; */
+    background: url(../../assets/images/About/IMG_9347.JPG) 10%;
     background-size: cover;
+    border-radius: 40px;
 }
 .content_about .right{
     width: 60%;
