--- a/src/Components/ui/Testimonial/Testimonial.module.css
+++ b/src/Components/ui/Testimonial/Testimonial.module.css
@@ -1,8 +1,106 @@
-/* الحاوية العامة لبطاقة التوصيات */
+.testimonial_box{
+  padding: 80px 0;
+}
+
+/* Start Testimonial header */
+.testimonial_header {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  padding: 10px 0;
+  margin: 15px auto;
+}
+
+.testimonial_header h1 {
+  display: flex;
+  align-items: center;
+  font-size: clamp(18px, 2vw, 24px);
+  font-weight: 400;
+}
+
+.testimonial_header .number {
+  opacity: 0.7;
+}
+
+.review_section {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px;
+  gap: 1rem;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown_button,
+.write_review_button {
+  padding: 8px 16px;
+  font-size: clamp(12px, 1vw, 16px);
+  border-radius: 25px;
+  cursor: pointer;
+}
+
+.dropdown_button {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--color-overlay);
+  color: var(--color-text);
+  border: none;
+}
+
+.dropdown_button .arrow {
+  margin-left: 5px;
+}
+
+.write_review_button {
+  background-color: var(--color-secondary);
+  color: var(--color-text);
+  border: none;
+}
+.dropdown_content {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: var(--color-overlay);
+  border: 1px solid var(--color-text);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 8px;
+  width: 100%;
+  max-height: 300px;
+  overflow: hidden;
+  transition: all 0.3s ease;
+}
+
+.dropdown_content .option{
+  font-size: clamp(10px, 1vw, 16px);
+  cursor: pointer;
+  margin: 2px auto;
+  transition: all .5s ease-in-out;
+}
+
+.option:hover{
+  color: var(--color-secondary);
+}
+
+.dropdown_content.open {
+  display: block;
+}
+
+/* End Testimonial header */
+
+/* Start Testimonial container */
+
 .testimonialContainer {
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(2,1fr);
   gap: 20px;
+  margin: 60px auto;
 }
 
 .testimonialCard {
@@ -81,7 +179,6 @@
   opacity: .5;
 }
 
-/* فقرة الرسالة */
 .userMessage p {
   font-size: 14px;
   color: #555;
@@ -89,7 +186,6 @@
   margin: 10px 0;
 }
 
-/* تذييل البطاقة */
 .cardFooter {
   display: flex;
   justify-content: space-between;
@@ -113,3 +209,5 @@
   font-size: 16px;
   color: #ffcc00;
 }
+
+/* End Testimonial container */
