--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ body{
   width: 100%;
   /* height: 100%; */
   min-height: 100vh;
-  background-color: var(--color-bg);
+  /* background-color: var(--color-bg); */
   padding: 80px 0;
   animation: boxOpacity 1s 1;
   transition: .5s;
