--- a/src/Components/Home/DynamicIntro.module.css
+++ b/src/Components/Home/DynamicIntro.module.css
@@ -9,11 +9,12 @@
 }
 .intro_text p{
     text-align: center;
+    font-weight: 600;
     font-size: clamp(20px, 2vw, 25px);
     letter-spacing: 1px;
-
 }
-.intro_text p span{
+.intro_text .role{
+    font-weight: bolder;
     color: var(--color-secondary);
 }
 
