--- a/src/Layouts/Loaders/Loader.module.css
+++ b/src/Layouts/Loaders/Loader.module.css
@@ -1,12 +1,10 @@
 .loader_container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .loader {
