--- a/src/Components/Contact/ContactContent.module.css
+++ b/src/Components/Contact/ContactContent.module.css
@@ -1,6 +1,5 @@
 .contact_content {
     width: 100%;
-    height: 90vh;
     max-height: 100vh;
     margin-top: 60px;
     position: relative;
@@ -46,7 +45,7 @@
     text-align: center;
 }
 
-.start {
+.container {
     background-color: var(--color-third);
     position: relative;
     display: grid;
@@ -55,26 +54,6 @@
     grid-template-rows: 1fr;
     justify-content: center;
     align-items: center;
-}
-
-.nv_message {
-    display: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    height: auto;
-    width: auto;
-    transform: translate(-50%, -50%);
-}
-.nv_message a {
-    padding: 10px 20px;
-    background-color: var(--color_secondary);
-    border-radius: 2px;
-    cursor: pointer;
-    opacity: .5;
-}
-.nv_message a:hover {
-    opacity: 1;
 }
 
 /* start header section */
@@ -91,6 +70,8 @@
 
 .header_section h1 {
     font-size: 28px;
+    display: flex;
+    align-items: center;
 }
 
 .header_section h1 span {
@@ -98,100 +79,19 @@
 }
 
 .header_section .form_description {
-    font-size: 14px;
+    font-size: clamp(10px, 2vw, 14px);
     font-family: var(--font-secondary);
+    color: #777;
 }
 
 /* end header section */
-
-/* start contact form */
-.contact_form {
-    display: none;
-    width: 100%;
-    max-width: 100%;
-    padding: 20px 40px;
-    background-color: var(--color-third);
-    border-radius: 8px;
-}
-
-.contact_form h1 {
-    font-size: 24px;
-    text-align: center;
-    margin-bottom: 5px;
-}
-
-.contact_form h1 span {
-    color: var(--color-secondary);
-}
-
-.contact_form input,
-.contact_form textarea {
-    display: block;
-    width: 100%;
-    padding: 10px 15px;
-    background-color: var(--color-overlay);
-    font-family: var(--font-secondary);
-    font-size: clamp(10px, 2vw, 14px);
-    outline: none;
-    border: 1px solid #333;
-    margin: 10px 0;
-    opacity: .5;
-    transition: .5s;
-}
-
-.contact_form textarea {
-    max-height: 150px;
-    resize: none;
-    margin-top: 20px;
-}
-
-.contact_form .form_group {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 10px;
-}
-
-.form_group input {
-    width: calc(50% - 10px);
-}
-
-.contact_form .button_group {
-    text-align: end;
-}
-
-.send_button {
-    all: unset;
-    background-color: var(--color-secondary);
-    padding: 10px;
-    opacity: .5;
-    cursor: pointer;
-    border-radius: 2px;
-    transition: .5s;
-}
-
-.send_button:hover,
-form input:hover,
-form textarea:hover{
-    opacity: 1;
-}
-
-.error_message {
-    color: red;
-    font-size: 12px;
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-
-/* end contact form */
 
 @media screen and (max-width: 991px) {
     .contact_content {
         display: block;
         height: auto;
     }
-    .start {
+    .container {
         width: 100%;
         height: auto;
     }
@@ -247,8 +147,4 @@ form textarea:hover{
     .info_icon i {
         font-size: 30px;
     }
-}
-
-.active{
-    display: block !important;
 }
