--- a/src/Components/ui/Overlay/Overlay.module.css
+++ b/src/Components/ui/Overlay/Overlay.module.css
@@ -17,7 +17,7 @@
     height: 200vh;
     width: 100%;
     background-color: var(--color-overlay);
-    z-index: 1000;
+    z-index: 1001;
     transform: translateY(-200vh);
 }
 
@@ -26,11 +26,11 @@
 }
 
 .open_effect{
-    animation: openOverlayAnimee .5s 1 ease-out;
+    animation: openOverlayAnimee 1s 1 ease-out;
 }
 
 .close_effect{
-    animation: closeOverlayAnimee .5s 1 ease-in;
+    animation: closeOverlayAnimee 1s 1 ease-in;
 }
 
 @keyframes fadeOut {
