--- a/src/Components/Common/Navbar/Navbar.module.css
+++ b/src/Components/Common/Navbar/Navbar.module.css
@@ -1,7 +1,3 @@
-.first{
-    z-index: 1000000;
-}
-
 /* Start NavBar */
 .navbar {
     position: fixed;
@@ -22,134 +18,17 @@
     display: flex;
     align-items: center;
     position: relative;
+    gap: 25px;
 }
 .links .linkItem {
-    margin-left: 30px;
     cursor: pointer;
 }
 
 .links .linkItem a{
-    /* letter-spacing: 3px; */
     transition: color 0.5s;
 }
 .links .linkItem:hover a,
 .links .active {
     color: var(--color-secondary);
-}
-
-.toggle_menu {
-    display: none;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    width: 40px;
-    height: auto;
-    background-color: transparent;
-    cursor: pointer;
-    transition: 0.5s;
-    border: none;
-}
-.toggle_menu span {
-    height: 4px;
-    background-color: var(--color-secondary);
-    border-radius: 2px;
-    opacity: 0.5;
-    width: 100%;
-    transition: 0.5s;
-}
-.toggle_menu span:nth-child(1) {
-    width: 30px;
-}
-.toggle_menu span:nth-child(3) {
-    width: 20px;
-}
-.toggle_menu:hover span {
-    opacity: 1;
-    width: 100%;
-}
-.toggle_menu span:not(:last-of-type) {
-    margin-bottom: 5px;
-}
-.links .logo_link {
-    display: none;
-    position: absolute;
-    top: 7%;
-    left: 0;
-    padding: 0;
-    text-align: center;
-    width: 100%;
-}
-.links .close_link {
-    display: none;
-    position: absolute;
-    top: 9%;
-    right: -15px;
-    padding: 5px 10px;
-    border-radius: 5px;
-    background-color: var(--color-secondary);
-    cursor: pointer;
-    opacity: 0.5;
-    z-index: 1000;
-}
-.close_link:hover {
-    opacity: 1;
-}
-
-.show{
-    display: block !important;
-}
-
-.hide{
-    display: none !important;
-}
-/* Start meduim and small device in media query */
-@media screen and (max-width: 992px) {
-    .close_link,
-    .logo_link {
-        display: block !important;
-    }
-    .toggle_menu {
-        display: flex;
-    }
-    .links {
-        display: none;
-        padding-top: 150px;
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 75%;
-        border-right: 1px solid #333;
-        background-color: #222;
-        z-index: 999;
-        transform: translateX(-100%); 
-        transition: transform 0.3s ease-in-out; 
-    }
-    .links.open {
-        display: block;
-        transform: translateX(0); 
-    }
-    .links .linkItem {
-        margin: 0;
-        margin-bottom: 20px;
-        padding-left: 30px;
-        animation: linksAnime 0.5s 1;
-    }
-}
-@keyframes moveLinks {
-    0% {
-        width: 0%;
-    }
-    100% {
-        max-width: 80%;
-    }
-}
-@keyframes linksAnime {
-    0% {
-        transform: translateX(-100%);
-    }
-    100% {
-        transform: translateX(0);
-    }
 }
 /* End Header Area */
