--- a/src/Components/Contact/ContactContent.module.css
+++ b/src/Components/Contact/ContactContent.module.css
@@ -54,6 +54,7 @@
     grid-template-rows: 1fr;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
 }
 
 /* start header section */
