--- a/src/Components/ui/Settings/ToggleSetting.module.css
+++ b/src/Components/ui/Settings/ToggleSetting.module.css
@@ -1,80 +1,113 @@
 
 .setting_container{
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    align-items: flex-start;
     position: absolute;
     bottom: 40px;
     left: 0;
     height: auto;
-    width: 30px;
+    width: 200px;
+    height: 250px;
     z-index: 1;
+    gap: 20px;
 }
 
+/* Start toggle setting */
 .toggle_settings{
-    order: 2;
-    width: 100%;
-    text-align: center;
-    height: auto;    
-}
-.toggle_settings svg{
-    font-size: 22px;
+    text-align: start;
+    height: auto; 
+    background-color: var(--color-overlay);
+    padding: 10px;
+    border-radius: 10px;
     cursor: pointer;
+}
+.toggle_settings svg path{
     transition: color .5s;
 }
-.toggle_settings svg:hover{
+.toggle_settings:hover svg path{
     color: var(--color-secondary);
 }
-
+/* End toggle setting */
 
 .settings{
-    order: 1;
-    height: auto;
+    flex-wrap: wrap;
+    height: 100%;
     width: 100%;
-    border: 1px solid var(--color-secondary);
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255, .2);
-    backdrop-filter: blur(30px);
-    margin-bottom: 10px;
-    overflow: hidden;
+    border-radius: 10px;
+    background-color: var(--color-overlay);
+    padding: 15px;
+    /* overflow: hidden; */
     transform: scaleY(0);
     transform-origin: bottom;
     animation: settingAnime .5s 1 forwards;
+    position: relative;
 }
 @keyframes settingAnime {
     0% { transform: scaleY(0); }
     100% { transform: scaleY(1); }
 }
-.settings li{
-    aspect-ratio: 1 / 1;
-    width: 70%;
-    margin: 10px auto;
-    border-radius: 5px;
-    text-align: center;
-    cursor: pointer;
+
+.settings::after{
+    content: '';
+    position: absolute;
+    bottom: -20px;
+    left: 15px;
+    width: 0;
+    height: 0;
+    border: 10px solid transparent;
+    border-top: 10px solid var(--color-overlay);
 }
 
-
-.show{
-    display: block;
+.setting_title{
+    width: 100%;
+    font-size: clamp(10px, 1vw, 14px);
+    font-family: var(--font-secondary);
+    font-weight: 700;
+    letter-spacing: 1px;
+    margin-bottom: 5px;
 }
 
-.hide{
-    display: none;
+.setting_item{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 5px;
+    margin-bottom: 10px;
+    width: 100%;
 }
 
-.settings li {
-    aspect-ratio: 1 / 1;
+.setting_item > div {
+    /* aspect-ratio: 1 / 1;
     width: 70%;
     margin: 10px auto;
     border-radius: 5px;
     text-align: center;
     cursor: pointer;
     padding: 10px;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease; */
+    height: 20px;
+    width: 20px;
+    border-radius: 5px;
+    opacity: .6;
+    transition: all 1s ease;
+}
+
+.setting_item > div:hover,
+.setting_item > svg:hover {
+    cursor: pointer;
+    opacity: 1;
   }
-  
-  .settings li:hover {
-    background-color: rgba(255, 255, 255, 0.4);
-  }
+
+.show{
+    display: flex;
+}
+
+.hide{
+    display: none;
+}
+
+.active{
+    opacity: 1 !important;
+}
