--- a/src/Components/ui/Social/SocialVerticalItem.module.css
+++ b/src/Components/ui/Social/SocialVerticalItem.module.css
@@ -5,13 +5,47 @@
     right: 0;
     height: auto;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    justify-content: center;
+    align-items: center;
 }
+
+.social li :hover path{
+    
+}
+
 .social li svg{
-    font-size: 22px;
-    cursor: pointer;
-    margin-top: 10px;
-    transition: .5s;
+    /* aspect-ratio: 1 / 1;  */
+    height: 20px;
+    width: 20px;
+    background-color: var(--color-overlay);
+    padding: 10px;
+    border-radius: 10px;
+    transition: all 1s ease-in-out;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
 }
-.social li svg:hover{
+
+.social li:hover path{
     color: var(--color-secondary);
+    transition: all 1s ease-in-out;
+}
+
+.social li:hover svg{
+    background-color: var(--color-third);
+}
+
+.social li svg::after{
+    content: '';
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border: 10px solid transparent;
+    border-top: 10px solid red;
+
 }
