--- a/src/Components/Home/LandingPage.module.css
+++ b/src/Components/Home/LandingPage.module.css
@@ -3,6 +3,7 @@
     max-height:100vh;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
