--- a/src/index.css
+++ b/src/index.css
@@ -44,11 +44,13 @@ code {
   color: var(--color-text);
   outline: none;
 }
+
 body{
   background: linear-gradient(to bottom, var(--color-bg) 97%, var(--color-secondary));
   width: 100%;
   /* height: 100vh; */
 }
+
 .container{
   max-width: 90%;
   margin: auto;
@@ -56,6 +58,7 @@ body{
   padding-right: 20px;
   overflow: hidden;
 }
+
 .box{
   /* position: absolute;
   top: 0;
@@ -69,6 +72,7 @@ body{
   animation: boxOpacity 1s 1;
   transition: .5s;
 }
+
 @keyframes boxOpacity {
   0%,50%{opacity: 0;}
   100%{opacity: 1;}
@@ -106,4 +110,10 @@ body{
 .dark{
   color: var(--color-text);
   background-color: var(--color-bg);
+}
+
+@media screen and (max-width: 1200px) {
+  .container{
+    max-width: 95%;
+  }
 }
