--- a/src/Components/Portfolio/Work.module.css
+++ b/src/Components/Portfolio/Work.module.css
@@ -125,3 +125,9 @@
     100% { background-position: top; }
 }
 /* End portfolio popup*/ 
+
+@media screen and (max-width:767px) {
+    .work{
+        width: calc(100% - 40px);
+    }
+}
