--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ body{
   background: linear-gradient(to bottom, var(--color-bg) 97%, var(--color-secondary));
   width: 100%;
   /* height: 100vh; */
+  overflow-x: hidden;
 }
 
 .container{
