--- a/src/Components/Common/HighwaySlider/HighwaySlider.module.css
+++ b/src/Components/Common/HighwaySlider/HighwaySlider.module.css
@@ -1,7 +1,3 @@
-.slide_option {
-    margin: 0 0 50px 0;
-}
-
 .no_marg {
     margin: 0;
 }
@@ -20,14 +16,19 @@
 .highway_barrier {
     overflow: hidden;
     position: relative;
-    -webkit-mask: linear-gradient(to right, var(--color-overlay) 10%, transparent 50%, var(--color-overlay) 90%);
-    mask: linear-gradient(to right, var(--color-overlay) 10%, transparent 50%, var(--color-overlay) 90%);
+    -webkit-mask: linear-gradient(to right, transparent 10%,var(--color-overlay) 50%, transparent 90%);
+    mask: linear-gradient(to right, transparent 10%,var(--color-overlay) 50%, transparent 90%);
 }
 
 .highway_lane {
     display: flex;
     height: 100%;
     width: calc(180px * 24);
+    animation: translateinfinite 25s linear infinite;
+}
+
+.highway_lane:hover {
+    animation-play-state: paused;
 }
 
 .highway_car {
@@ -36,7 +37,13 @@
     justify-content: center;
     align-items: center;
     width: 180px;
-    animation: translateinfinite 25s linear infinite;
+    border-radius: 5px;
+    transition: 1s;
+}
+
+.highway_car:hover{
+    background-color: var(--color-secondary);
+    cursor: pointer;
 }
 
 @keyframes translateinfinite {
