--- a/src/Components/Common/MainHeading/MainHeading.module.css
+++ b/src/Components/Common/MainHeading/MainHeading.module.css
@@ -33,12 +33,15 @@
     50%{transform: translateX(-65px);}
 }
 .small_text{
-    font-size: 16px;
+    font-size: clamp(16px, 2vw, 20px);
+    font-family: var(--font-secondary);
+    font-weight: 700;
     color: #777;
 }
 .main_text{
-    font-size: 45px;
+    font-size: clamp(38px, 2vw, 45px);
 }
 .highlighted_text{
+    font-size: clamp(38px, 2vw, 45px);
     color: var(--color-secondary);
 }
