--- a/src/Components/ui/Testimonial/Reviews.module.css
+++ b/src/Components/ui/Testimonial/Reviews.module.css
@@ -1,5 +1,5 @@
 .reviews_box {
-    padding: 80px 0;
+    padding: 60px 0;
 }
 
 .reviews_content {
@@ -23,8 +23,8 @@
 .title {
     display: flex;
     align-items: center;
+    gap: 5px;
     font-size: clamp(18px, 2vw, 24px);
-    font-weight: 400;
 }
 
 .title .number {
@@ -89,11 +89,12 @@
 }
 
 .dropdown_content .option {
-    font-size: clamp(10px, 1vw, 16px);
+    font-size: clamp(14px, 1vw, 16px);
     color: var(--color-overlay);
     cursor: pointer;
     margin: 2px auto;
     transition: all .5s ease-in-out;
+    line-height: 2;
 }
 
 .option:hover {
@@ -148,17 +149,17 @@
     display: flex;
     justify-content: start;
     margin-bottom: 10px;
-    opacity: .5;
+    opacity: .6;
 }
 
 .stars svg{
-    fill: var(--color-secondary);
+    fill: var(--color-text);
 }
 
 .review_text {
     font-family: var(--font-secondary);
     font-weight: 400;
-    font-size: clamp(12px, 1vw, 16px);
+    font-size: clamp(14px, 1vw, 16px);
     margin-top: 10px;
     letter-spacing: 1px;
     text-align: justify;
@@ -184,15 +185,16 @@
 .user_name {
     color: var(--color-secondary);
     letter-spacing: 1px;
-    opacity: .5;
+    font-size: clamp(14px, 1vw, 16px);
 }
 
 .user_job {
-    font-size: clamp(12, 1vw, 14px);
-    color: #777;
+    font-size: clamp(12px, 1vw, 14px);
+    color: var(--color-text);
     font-family: var(--font-secondary);
     font-weight: 700;
     letter-spacing: 1px;
+    opacity: .6;
 }
 
 .load{
@@ -218,4 +220,52 @@
 
 .load_more:hover {
     opacity: 1;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .reviews_header {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .reviews_section {
+        padding: 10px 0;
+        justify-content: center;
+        gap: 5px;
+    }
+    
+    .dropdown {
+        width: 50%;
+    }
+
+    .dropdown_button{
+        width: 100%;
+        justify-content: center;
+        gap: 5px;
+        padding: 10px 15px;
+        font-size: 14px;
+    }
+
+    .write_review_button {
+        width: 50%;
+        padding: 10px 15px;
+        font-size: 14px;
+    }
+
+    .grid_container {
+        grid-template-columns: 1fr;
+        gap: 15px;
+    }
+
+    .card_content {
+        padding: 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    .dropdown_button, .write_review_button {
+        font-size: 14px;
+        padding: 10px;
+    }
 }
