--- a/src/Components/Contact/ContactContent.module.css
+++ b/src/Components/Contact/ContactContent.module.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-    background-color: var(--color-third);
+    background-color: var(--color-overlay);
     position: relative;
     display: grid;
     flex-wrap: wrap;
