--- a/src/Components/Common/Navbar/Navbar.module.css
+++ b/src/Components/Common/Navbar/Navbar.module.css
@@ -24,6 +24,26 @@
     cursor: pointer;
 }
 
+.contactItem {
+    padding: 10px;
+    border-radius: 5px;
+    position: relative;
+    background-color: var(--color-secondary);
+}
+/* 
+.contactItem::after{
+    content: "";
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    width: 100%;
+    height: 100%;
+    padding: 1px;
+    border-radius: 5px;
+    z-index: -1;
+    background: linear-gradient(to left, var(--color-text) 10%, transparent 90%);
+} */
+
 .links .linkItem a{
     transition: color 0.5s;
 }
