--- a/src/Components/Portfolio/Work.module.css
+++ b/src/Components/Portfolio/Work.module.css
@@ -2,7 +2,7 @@
     margin: 20px auto;
     width: calc(100% / 3 - 40px);
     border-radius: 3px;
-    background-color: #111;
+    background-color: var(--color-overlay);
     overflow: hidden;
     position: relative;
     padding: 5px;
