--- a/src/Components/ui/Testimonial/Reviews.module.css
+++ b/src/Components/ui/Testimonial/Reviews.module.css
@@ -115,7 +115,7 @@
 }
 
 .card {
-    background: linear-gradient(to top, var(--color-overlay), var(--color-third));
+    background: linear-gradient(to top, var(--color-third), var(--color-bg));
     border-radius: 10px;
     padding: 2px;
     transition: transform 0.3s;
@@ -130,7 +130,7 @@
     height: 100%;
     padding: 30px 20px;
     border-radius: 10px;
-    background-color: var(--color-third);
+    background-color: var(--color-overlay);
     position: relative;
 }
 
@@ -192,7 +192,15 @@
     font-size: clamp(12px, 1vw, 14px);
     color: var(--color-text);
     font-family: var(--font-secondary);
-    font-weight: 700;
+    font-weight: 600;
+    letter-spacing: 1px;
+    opacity: .6;
+}
+
+.time{
+    font-size: clamp(10px, 1vw, 14px);
+    font-family: var(--font-secondary);
+    font-weight: 600;
     letter-spacing: 1px;
     opacity: .6;
 }
